--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-	<img src="imgs/alexsouza.png">
+	<img src="alexsouza.png">
 	<header class="agendar">
 		<h1>Visitas Técnicas e Aulas Básicas</h1>
 		<button>AGENDAR</button>
