--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -12,12 +13,6 @@
 		<h1>Visitas Técnicas e Aulas Básicas</h1>
 		<button>AGENDAR</button>
 	</header>
-	<div class="caixa">
-			<h1>Link para Whatsapp</h1>
-				<input type="text" id="entraNum" placeholder="(00)0 0000-0000">
-				<input type="text" id="msgOpc" placeholder="Mensagem opcional">
-				<button onclick="vai()" id="whats">Abrir</button>
-	</div>
 	<section class="basec">
 		<h1>Cursos</h1>
 		<ol>
@@ -36,6 +31,12 @@
 				<iframe width="100%" height="100%" src="https://www.youtube.com/embed/upmY5flgZSA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 		</ol>
 	</section>
+	<div class="caixa">
+			<h1>Gerar link para Whatsapp</h1>
+				<input type="text" id="entraNum" placeholder="(00)0 0000-0000">
+				<input type="text" id="msgOpc" placeholder="Mensagem opcional">
+				<button onclick="vai()" id="whats">Abrir</button>
+	</div>
 </body>
 <script type="text/javascript">
   		function vai() {
