--- a/index.html
+++ b/index.html
@@ -15,21 +15,32 @@
 	</header>
 	<section class="basec">
 		<h1>Cursos</h1>
-		<ol>
-			<li>Datilografia
+		<article class="ol">
+			<figure class="li">Datilografia
 				<iframe width="100%" height="100%" src="https://www.youtube.com/embed/upmY5flgZSA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			</li>
-			<li>Datilografia
-				<iframe width="100%" height="100%" src="https://www.youtube.com/embed/upmY5flgZSA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-			<li>Datilografia
-				<iframe width="100%" height="100%" src="https://www.youtube.com/embed/upmY5flgZSA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-			<li>Datilografia
-				<iframe width="100%" height="100%" src="https://www.youtube.com/embed/upmY5flgZSA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-			<li>Datilografia
-				<iframe width="100%" height="100%" src="https://www.youtube.com/embed/upmY5flgZSA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-			<li>Datilografia
-				<iframe width="100%" height="100%" src="https://www.youtube.com/embed/upmY5flgZSA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		</ol>
+				<figcaption>Saber mais...</figcaption>
+			</figure>
+			<figure class="li">Datilografia
+				<iframe width="100%" height="100%" src="https://www.youtube.com/embed/upmY5flgZSA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<figcaption>Saber mais...</figcaption>
+			</figure>
+			<figure class="li">Datilografia
+				<iframe width="100%" height="100%" src="https://www.youtube.com/embed/upmY5flgZSA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<figcaption>Saber mais...</figcaption>
+			</figure>
+			<figure class="li">Datilografia
+				<iframe width="100%" height="100%" src="https://www.youtube.com/embed/upmY5flgZSA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<figcaption>Saber mais...</figcaption>
+			</figure>
+			<figure class="li">Datilografia
+				<iframe width="100%" height="100%" src="https://www.youtube.com/embed/upmY5flgZSA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<figcaption>Saber mais...</figcaption>
+			</figure>
+			<figure class="li">Datilografia
+				<iframe width="100%" height="100%" src="https://www.youtube.com/embed/upmY5flgZSA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<figcaption>Saber mais...</figcaption>
+			</figure>
+		</article>
 	</section>
 	<div class="caixa">
 			<h1>Gerar link para Whatsapp</h1>
