--- a/index.html
+++ b/index.html
@@ -17,27 +17,27 @@
 		<h1>Cursos</h1>
 		<article class="ol">
 			<figure class="li">Datilografia
-				<iframe width="100%" height="100%" src="https://www.youtube.com/embed/upmY5flgZSA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<img src="ytb.png">
 				<figcaption>Saber mais...</figcaption>
 			</figure>
 			<figure class="li">Datilografia
-				<iframe width="100%" height="100%" src="https://www.youtube.com/embed/upmY5flgZSA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<img src="ytb.png">
 				<figcaption>Saber mais...</figcaption>
 			</figure>
 			<figure class="li">Datilografia
-				<iframe width="100%" height="100%" src="https://www.youtube.com/embed/upmY5flgZSA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<img src="ytb.png">
 				<figcaption>Saber mais...</figcaption>
 			</figure>
 			<figure class="li">Datilografia
-				<iframe width="100%" height="100%" src="https://www.youtube.com/embed/upmY5flgZSA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<img src="ytb.png">
 				<figcaption>Saber mais...</figcaption>
 			</figure>
 			<figure class="li">Datilografia
-				<iframe width="100%" height="100%" src="https://www.youtube.com/embed/upmY5flgZSA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<img src="ytb.png">
 				<figcaption>Saber mais...</figcaption>
 			</figure>
 			<figure class="li">Datilografia
-				<iframe width="100%" height="100%" src="https://www.youtube.com/embed/upmY5flgZSA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<img src="ytb.png">
 				<figcaption>Saber mais...</figcaption>
 			</figure>
 		</article>
