--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="pt-br">
 <head>
 	<title>Alex Souza</title>
+	<link rel="shortcut icon" href=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR0mQp5g_6qY0u26BwJ7xsvJ5ctrADjfVqs3cGzeJVLa5u_rQSPas1Pvo4Qee8RE-VLhvTUchbOC8U_t4B03ybrARs4RGX-u8Q&usqp=CAU&ec=45732300" >
 	<link rel="stylesheet" type="text/css" href="stilo.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
