--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-	<title>Alex Souza</title>
-	<link rel="shortcut icon" href=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR0mQp5g_6qY0u26BwJ7xsvJ5ctrADjfVqs3cGzeJVLa5u_rQSPas1Pvo4Qee8RE-VLhvTUchbOC8U_t4B03ybrARs4RGX-u8Q&usqp=CAU&ec=45732300" >
-	<link rel="stylesheet" type="text/css" href="stilo.css">
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
+		<head>
+			<title>Alex Souza</title>
+			<link rel="shortcut icon" href="icon.png">
+			<link rel="stylesheet" type="text/css" href="stilo.css">
+			<meta charset="utf-8">
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		</head>
 <body>
-	<img src="alexsouza.png">
-	<header class="agendar">
+	
+	<header class="menu">
+				<img src="alexsouza.png">
+	</header>
+
+	<div class="agendar">
 		<h1>Visitas Técnicas e Aulas Básicas</h1>
 		<button>AGENDAR</button>
-	</header>
+	</div>
 	<section class="basec">
 		<h1>Cursos</h1>
 		<article class="ol">
@@ -45,9 +49,9 @@
 	</section>
 	<div class="caixa">
 			<h1>Gerar link para Whatsapp</h1>
-				<input type="text" id="entraNum" placeholder="(00)0 0000-0000">
-				<input type="text" id="msgOpc" placeholder="Mensagem opcional">
-				<button onclick="vai()" id="whats">Abrir</button>
+			<input type="text" id="entraNum" placeholder="(00)0 0000-0000">
+			<input type="text" id="msgOpc" placeholder="Mensagem opcional">
+			<button onclick="vai()" id="whats">Abrir</button>
 	</div>
 </body>
 <script type="text/javascript">
