--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="pt-br">
 		<head>
@@ -11,7 +12,7 @@
 <body>
 	
 	<header class="menu">
-				<img src="alexsouza.png">
+				<h1>Alex Souza</h1>
 	</header>
 
 	<div class="agendar">
