--- a/index.html
+++ b/index.html
@@ -22,27 +22,27 @@
 	<section class="basec">
 		<h1>Cursos</h1>
 		<article class="ol">
-			<figure class="li">Datilografia
+			<figure class="li">Curso 01
 				<img src="ytb.png">
 				<figcaption>Saber mais...</figcaption>
 			</figure>
-			<figure class="li">Datilografia
+			<figure class="li">Curso 02
 				<img src="ytb.png">
 				<figcaption>Saber mais...</figcaption>
 			</figure>
-			<figure class="li">Datilografia
+			<figure class="li">Curso 03
 				<img src="ytb.png">
 				<figcaption>Saber mais...</figcaption>
 			</figure>
-			<figure class="li">Datilografia
+			<figure class="li">Curso 04
 				<img src="ytb.png">
 				<figcaption>Saber mais...</figcaption>
 			</figure>
-			<figure class="li">Datilografia
+			<figure class="li">Curso 05
 				<img src="ytb.png">
 				<figcaption>Saber mais...</figcaption>
 			</figure>
-			<figure class="li">Datilografia
+			<figure class="li">Curso 06
 				<img src="ytb.png">
 				<figcaption>Saber mais...</figcaption>
 			</figure>
@@ -55,55 +55,7 @@
 			<button onclick="vai()" id="whats">Abrir</button>
 	</div>
 	<div class="caixa">
-			<h1>Gerar link para Whatsapp</h1>
-			<input type="text" id="entraNum" placeholder="(00)0 0000-0000">
-			<input type="text" id="msgOpc" placeholder="Mensagem opcional">
-			<button onclick="vai()" id="whats">Abrir</button>
-	</div>
-	<div class="caixa">
-			<h1>Gerar link para Whatsapp</h1>
-			<input type="text" id="entraNum" placeholder="(00)0 0000-0000">
-			<input type="text" id="msgOpc" placeholder="Mensagem opcional">
-			<button onclick="vai()" id="whats">Abrir</button>
-	</div>
-	<div class="caixa">
-			<h1>Gerar link para Whatsapp</h1>
-			<input type="text" id="entraNum" placeholder="(00)0 0000-0000">
-			<input type="text" id="msgOpc" placeholder="Mensagem opcional">
-			<button onclick="vai()" id="whats">Abrir</button>
-	</div>
-	<div class="caixa">
-			<h1>Gerar link para Whatsapp</h1>
-			<input type="text" id="entraNum" placeholder="(00)0 0000-0000">
-			<input type="text" id="msgOpc" placeholder="Mensagem opcional">
-			<button onclick="vai()" id="whats">Abrir</button>
-	</div>
-	<div class="caixa">
-			<h1>Gerar link para Whatsapp</h1>
-			<input type="text" id="entraNum" placeholder="(00)0 0000-0000">
-			<input type="text" id="msgOpc" placeholder="Mensagem opcional">
-			<button onclick="vai()" id="whats">Abrir</button>
-	</div>
-	<div class="caixa">
-			<h1>Gerar link para Whatsapp</h1>
-			<input type="text" id="entraNum" placeholder="(00)0 0000-0000">
-			<input type="text" id="msgOpc" placeholder="Mensagem opcional">
-			<button onclick="vai()" id="whats">Abrir</button>
-	</div>
-	<div class="caixa">
-			<h1>Gerar link para Whatsapp</h1>
-			<input type="text" id="entraNum" placeholder="(00)0 0000-0000">
-			<input type="text" id="msgOpc" placeholder="Mensagem opcional">
-			<button onclick="vai()" id="whats">Abrir</button>
-	</div>
-	<div class="caixa">
-			<h1>Gerar link para Whatsapp</h1>
-			<input type="text" id="entraNum" placeholder="(00)0 0000-0000">
-			<input type="text" id="msgOpc" placeholder="Mensagem opcional">
-			<button onclick="vai()" id="whats">Abrir</button>
-	</div>
-	<div class="caixa">
-			<h1>Gerar link para Whatsapp</h1>
+			<h1>Ajuda e Dicas</h1>
 			<input type="text" id="entraNum" placeholder="(00)0 0000-0000">
 			<input type="text" id="msgOpc" placeholder="Mensagem opcional">
 			<button onclick="vai()" id="whats">Abrir</button>
