--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 		<head>
-			<title>Alex Souza</title>
+			<title>InfoBR</title>
 			<link rel="shortcut icon" href="icon.png">
 			<link rel="stylesheet" type="text/css" href="stilo.css">
 			<meta charset="utf-8">
@@ -12,53 +12,50 @@
 <body>
 	
 	<header class="menu">
-				<h1>Alex Souza</h1>
+				<h1>InfoBR</h1>
 	</header>
-
-	<div class="agendar">
-		<h1>Visitas Técnicas e Aulas Básicas</h1>
-		<button>AGENDAR</button>
+	<div class="caixa">
+			<h1>Link para Whatsapp</h1>
+			<input type="text" id="entraNum" placeholder="(00)0 0000-0000">
+			<input type="text" id="msgOpc" placeholder="Mensagem opcional">
+			<button onclick="vai()" id="whats">Abrir</button>
 	</div>
+
 	<section class="basec">
 		<h1>Cursos</h1>
 		<article class="ol">
-			<figure class="li">Curso 01
+			<figure class="li">Curso 1
 				<img src="ytb.png">
 				<figcaption>Saber mais...</figcaption>
 			</figure>
-			<figure class="li">Curso 02
+			<figure class="li">Curso 2
 				<img src="ytb.png">
 				<figcaption>Saber mais...</figcaption>
 			</figure>
-			<figure class="li">Curso 03
+			<figure class="li">Curso 3
 				<img src="ytb.png">
 				<figcaption>Saber mais...</figcaption>
 			</figure>
-			<figure class="li">Curso 04
+			<figure class="li">Curso 4
 				<img src="ytb.png">
 				<figcaption>Saber mais...</figcaption>
 			</figure>
-			<figure class="li">Curso 05
+			<figure class="li">Curso 5
 				<img src="ytb.png">
 				<figcaption>Saber mais...</figcaption>
 			</figure>
-			<figure class="li">Curso 06
+			<figure class="li">Curso 6
 				<img src="ytb.png">
 				<figcaption>Saber mais...</figcaption>
 			</figure>
 		</article>
 	</section>
-	<div class="caixa">
-			<h1>Gerar link para Whatsapp</h1>
-			<input type="text" id="entraNum" placeholder="(00)0 0000-0000">
-			<input type="text" id="msgOpc" placeholder="Mensagem opcional">
-			<button onclick="vai()" id="whats">Abrir</button>
+	<div class="agendar">
+		<h1>Visitas Técnicas e Aulas Básicas</h1>
+		<button>AGENDAR</button>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d244584.17760433958!2d-49.44435535229795!3d-16.695499894685117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935ef6bd58d80867%3A0xef692bad20d2678e!2zR29pw6JuaWEsIEdP!5e0!3m2!1spt-BR!2sbr!4v1606948802372!5m2!1spt-BR!2sbr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 	</div>
-	<div class="caixa">
-			<h1>Ajuda e Dicas</h1>
-			<input type="text" id="entraNum" placeholder="(00)0 0000-0000">
-			<input type="text" id="msgOpc" placeholder="Mensagem opcional">
-			<button onclick="vai()" id="whats">Abrir</button>
+	
 	</div>
 </body>
 <script type="text/javascript">
