--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
 	<header class="menu">
 				<h1>InfoBR</h1>
 	</header>
+		<div class="agendar">
+		<h1>Visitas Técnicas e Aulas Básicas</h1>
+		<button>AGENDAR</button>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d244584.17760433958!2d-49.44435535229795!3d-16.695499894685117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935ef6bd58d80867%3A0xef692bad20d2678e!2zR29pw6JuaWEsIEdP!5e0!3m2!1spt-BR!2sbr!4v1606948802372!5m2!1spt-BR!2sbr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+	</div>
 	<div class="caixa">
-			<h1>Link para Whatsapp</h1>
+			<h1>Criar link para Whatsapp</h1>
 			<input type="text" id="entraNum" placeholder="(00)0 0000-0000">
 			<input type="text" id="msgOpc" placeholder="Mensagem opcional">
 			<button onclick="vai()" id="whats">Abrir</button>
@@ -50,13 +55,6 @@
 			</figure>
 		</article>
 	</section>
-	<div class="agendar">
-		<h1>Visitas Técnicas e Aulas Básicas</h1>
-		<button>AGENDAR</button>
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d244584.17760433958!2d-49.44435535229795!3d-16.695499894685117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935ef6bd58d80867%3A0xef692bad20d2678e!2zR29pw6JuaWEsIEdP!5e0!3m2!1spt-BR!2sbr!4v1606948802372!5m2!1spt-BR!2sbr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-	</div>
-	
-	</div>
 </body>
 <script type="text/javascript">
   		function vai() {
