--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 			</figure>
 		</article>
 	</section>
+	<footer>
+		<div><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/768px-Instagram_icon.png"><h2>Alex Souza</h2></div>
+	</footer>
 </body>
 <script type="text/javascript">
   		function vai() {
