--- a/index.html
+++ b/index.html
@@ -30,27 +30,27 @@
 		<h1>Cursos</h1>
 		<article class="ol">
 			<figure class="li">Curso 1
-				<img src="ytb.png">
+				<iframe class="img" src="https://www.youtube.com/embed/Nt-HV8ZQUfo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<figcaption>Saber mais...</figcaption>
 			</figure>
 			<figure class="li">Curso 2
-				<img src="ytb.png">
+				<iframe class="img" src="https://www.youtube.com/embed/Nt-HV8ZQUfo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<figcaption>Saber mais...</figcaption>
 			</figure>
 			<figure class="li">Curso 3
-				<img src="ytb.png">
+				<iframe class="img" src="https://www.youtube.com/embed/Nt-HV8ZQUfo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<figcaption>Saber mais...</figcaption>
 			</figure>
 			<figure class="li">Curso 4
-				<img src="ytb.png">
+				<iframe class="img" src="https://www.youtube.com/embed/Nt-HV8ZQUfo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<figcaption>Saber mais...</figcaption>
 			</figure>
 			<figure class="li">Curso 5
-				<img src="ytb.png">
+				<iframe class="img" src="https://www.youtube.com/embed/Nt-HV8ZQUfo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<figcaption>Saber mais...</figcaption>
 			</figure>
 			<figure class="li">Curso 6
-				<img src="ytb.png">
+				<iframe class="img" src="https://www.youtube.com/embed/Nt-HV8ZQUfo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<figcaption>Saber mais...</figcaption>
 			</figure>
 		</article>
