--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
 	<section class="basec">
 		<h1>Cursos</h1>
 		<article class="ol">
-			<figure class="li">Curso 1
+			<figure class="li">Digitação Online com Certificado
 				<iframe class="img" src="https://www.youtube.com/embed/Nt-HV8ZQUfo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<figcaption>Saber mais...</figcaption>
 			</figure>
-			<figure class="li">Curso 2
-				<iframe class="img" src="https://www.youtube.com/embed/Nt-HV8ZQUfo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<figure class="li">Informátiaca Empresarial
+				<iframe src="https://www.youtube.com/embed/eJrbqjj1sAo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<figcaption>Saber mais...</figcaption>
 			</figure>
-			<figure class="li">Curso 3
-				<iframe class="img" src="https://www.youtube.com/embed/Nt-HV8ZQUfo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<figure class="li">Curso Online de Word
+				<iframe src="https://www.youtube.com/embed/KM6SwcqMnXo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<figcaption>Saber mais...</figcaption>
 			</figure>
 			<figure class="li">Curso 4
