--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="pt-br">
 		<head>
@@ -14,8 +12,13 @@
 	<header class="menu">
 				<h1>InfoBR</h1>
 	</header>
+	<div class="caixaDep">
+		<div><a href="informatica.html">Informatica</a></div>
+		<div>Celulares</div>
+		<div>Serviços</div>
+	</div>
 		<div class="agendar">
-		<h1>Visitas Técnicas e Aulas Básicas</h1>
+		<h1>Visitas Técnicas</h1>
 		<button>AGENDAR</button>
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d496596.2073729492!2d-44.32060399610307!3d-13.49516726269738!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7593dc94d7bc589%3A0x32914e96b128d1cf!2sS%C3%A3o%20F%C3%A9lix%20do%20Coribe%20-%20BA!5e0!3m2!1spt-BR!2sbr!4v1607151080984!5m2!1spt-BR!2sbr" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 	</div>
@@ -27,31 +30,78 @@
 	</div>
 
 	<section class="basec">
-		<h1>Cursos</h1>
 		<article class="ol">
-			<figure class="li">Digitação Online com Certificado
-				<iframe class="img" src="https://www.youtube.com/embed/Nt-HV8ZQUfo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				<figcaption>Saber mais...</figcaption>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<figcaption>CD-0001 Saber mais...</figcaption>
 			</figure>
-			<figure class="li">Informátiaca Empresarial
-				<iframe src="https://www.youtube.com/embed/eJrbqjj1sAo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				<figcaption>Saber mais...</figcaption>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<figcaption>CD-0002 Saber mais...</figcaption>
 			</figure>
-			<figure class="li">Curso Online de Word
-				<iframe src="https://www.youtube.com/embed/KM6SwcqMnXo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				<figcaption>Saber mais...</figcaption>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<figcaption>CD-0003 Saber mais...</figcaption>
 			</figure>
-			<figure class="li">Curso 4
-				<iframe class="img" src="https://www.youtube.com/embed/Nt-HV8ZQUfo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				<figcaption>Saber mais...</figcaption>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<figcaption>CD-0004 Saber mais...</figcaption>
 			</figure>
-			<figure class="li">Curso 5
-				<iframe class="img" src="https://www.youtube.com/embed/Nt-HV8ZQUfo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				<figcaption>Saber mais...</figcaption>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<figcaption>CD-0005 Saber mais...</figcaption>
 			</figure>
-			<figure class="li">Curso 6
-				<iframe class="img" src="https://www.youtube.com/embed/Nt-HV8ZQUfo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				<figcaption>Saber mais...</figcaption>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<figcaption>CD-0006 Saber mais...</figcaption>
+			</figure>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<figcaption>CD-0001 Saber mais...</figcaption>
+			</figure>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<figcaption>CD-0002 Saber mais...</figcaption>
+			</figure>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<figcaption>CD-0003 Saber mais...</figcaption>
+			</figure>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<figcaption>CD-0004 Saber mais...</figcaption>
+			</figure>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<figcaption>CD-0005 Saber mais...</figcaption>
+			</figure>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<figcaption>CD-0006 Saber mais...</figcaption>
+			</figure>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<figcaption>CD-0001 Saber mais...</figcaption>
+			</figure>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<figcaption>CD-0002 Saber mais...</figcaption>
+			</figure>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<figcaption>CD-0003 Saber mais...</figcaption>
+			</figure>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<figcaption>CD-0004 Saber mais...</figcaption>
+			</figure>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<figcaption>CD-0005 Saber mais...</figcaption>
+			</figure>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<figcaption>CD-0006 Saber mais...</figcaption>
 			</figure>
 		</article>
 	</section>
