--- a/index.html
+++ b/index.html
@@ -13,22 +13,16 @@
 				<h1>InfoBR</h1>
 	</header>
 	<div class="caixaDep">
-		<div><a href="informatica.html">Informatica</a></div>
-		<div>Celulares</div>
-		<div>Serviços</div>
+		<div><a href="index.html">Home</a></div>
+		<div><a href="informatica.html">Informática</a></div>
+		<div><a href="celulares.html">Celulares</a></div>
 	</div>
 		<div class="agendar">
-		<h1>Visitas Técnicas</h1>
+		<h1>Visita Técnica</h1>
 		<button>AGENDAR</button>
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d496596.2073729492!2d-44.32060399610307!3d-13.49516726269738!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7593dc94d7bc589%3A0x32914e96b128d1cf!2sS%C3%A3o%20F%C3%A9lix%20do%20Coribe%20-%20BA!5e0!3m2!1spt-BR!2sbr!4v1607151080984!5m2!1spt-BR!2sbr" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d496596.2073729492!2d-44.32060399610307!3d-13.49516726269738!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7593dc94d7bc589%3A0x32914e96b128d1cf!2sS%C3%A3o%20F%C3%A9lix%20do%20Coribe%20-%20BA!5e0!3m2!1spt-BR!2sbr!4v1607151080984!5m2!1spt-BR!2sbr" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">	
+			</iframe>
 	</div>
-	<div class="caixa">
-			<h1>Criar link para Whatsapp</h1>
-			<input type="text" id="entraNum" placeholder="(00)0 0000-0000">
-			<input type="text" id="msgOpc" placeholder="Mensagem opcional">
-			<button onclick="vai()" id="whats">Abrir</button>
-	</div>
-
 	<section class="basec">
 		<article class="ol">
 			<figure class="li">Cabo nylon i2go 2m
@@ -105,6 +99,12 @@
 			</figure>
 		</article>
 	</section>
+	<div class="caixa">
+			<h1>Criar link para Whatsapp</h1>
+			<input type="text" id="entraNum" placeholder="(00)0 0000-0000">
+			<input type="text" id="msgOpc" placeholder="Mensagem opcional">
+			<button onclick="vai()" id="whats">Abrir</button>
+	</div>
 	<footer>
 		<div><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/768px-Instagram_icon.png"><h2>Alex Souza</h2></div>
 	</footer>
