--- a/informatica.html
+++ b/informatica.html
@@ -12,9 +12,9 @@
 				<h1>InfoBR</h1>
 	</header>
 	<div class="caixaDep">
-		<div><a href="informatica.html">Informatica</a></div>
-		<div>Celulares</div>
-		<div>Serviços</div>
+		<div><a href="index.html">Home</a></div>
+		<div><a href="informatica.html">Informática</a></div>
+		<div><a href="celulares.html">Celulares</a></div>
 	</div>
 	<section class="basec">
 		<article class="ol">
