--- a/index.html
+++ b/index.html
@@ -13,100 +13,119 @@
 				<h1>InfoBR</h1>
 	</header>
 	<div class="caixaDep">
-		<div><a href="index.html">Home</a></div>
-		<div><a href="informatica.html">Informática</a></div>
-		<div><a href="celulares.html">Celulares</a></div>
+		<a href="index.html"><div class="fixcap">Home</div></a>
+		<a href="informatica.html"><div>Informática</div></a>
+		<a href="celulares.html"><div>Celulares</div></a>
 	</div>
 		<div class="agendar">
 		<h1>Visita Técnica</h1>
-		<button>AGENDAR</button>
+		<button><a  href="" target="_blank"  onclick="function_name()">AGENDAR</a></button>
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d496596.2073729492!2d-44.32060399610307!3d-13.49516726269738!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7593dc94d7bc589%3A0x32914e96b128d1cf!2sS%C3%A3o%20F%C3%A9lix%20do%20Coribe%20-%20BA!5e0!3m2!1spt-BR!2sbr!4v1607151080984!5m2!1spt-BR!2sbr" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">	
 			</iframe>
 	</div>
 	<section class="basec">
 		<article class="ol">
+			<script type="text/javascript">
+				function function_name() {
+					alert("Bu!");
+				}
+			</script>
 			<figure class="li">Cabo nylon i2go 2m
 				<img src="produt.png"> 
-				<figcaption>CD-0001 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"><figcaption>CD-0001 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Cabo nylon i2go 2m
 				<img src="produt.png"> 
-				<figcaption>CD-0002 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"><figcaption>CD-0002 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Cabo nylon i2go 2m
 				<img src="produt.png"> 
-				<figcaption>CD-0003 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"><figcaption>CD-0003 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Cabo nylon i2go 2m
 				<img src="produt.png"> 
-				<figcaption>CD-0004 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"><figcaption>CD-0004 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Cabo nylon i2go 2m
 				<img src="produt.png"> 
-				<figcaption>CD-0005 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"><figcaption>CD-0005 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Cabo nylon i2go 2m
 				<img src="produt.png"> 
-				<figcaption>CD-0006 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"><figcaption>CD-0006 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Cabo nylon i2go 2m
 				<img src="produt.png"> 
-				<figcaption>CD-0001 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"><figcaption>CD-0001 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Cabo nylon i2go 2m
 				<img src="produt.png"> 
-				<figcaption>CD-0002 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"><figcaption>CD-0002 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Cabo nylon i2go 2m
 				<img src="produt.png"> 
-				<figcaption>CD-0003 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"><figcaption>CD-0003 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Cabo nylon i2go 2m
 				<img src="produt.png"> 
-				<figcaption>CD-0004 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"><figcaption>CD-0004 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Cabo nylon i2go 2m
 				<img src="produt.png"> 
-				<figcaption>CD-0005 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"><figcaption>CD-0005 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Cabo nylon i2go 2m
 				<img src="produt.png"> 
-				<figcaption>CD-0006 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"><figcaption>CD-0006 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Cabo nylon i2go 2m
 				<img src="produt.png"> 
-				<figcaption>CD-0001 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"><figcaption>CD-0001 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Cabo nylon i2go 2m
 				<img src="produt.png"> 
-				<figcaption>CD-0002 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"><figcaption>CD-0002 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Cabo nylon i2go 2m
 				<img src="produt.png"> 
-				<figcaption>CD-0003 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"><figcaption>CD-0003 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Cabo nylon i2go 2m
 				<img src="produt.png"> 
-				<figcaption>CD-0004 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"><figcaption>CD-0004 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Cabo nylon i2go 2m
 				<img src="produt.png"> 
-				<figcaption>CD-0005 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"><figcaption>CD-0005 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Cabo nylon i2go 2m
 				<img src="produt.png"> 
-				<figcaption>CD-0006 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"><figcaption>CD-0006 Saber mais...</figcaption></a>
 			</figure>
 		</article>
 	</section>
-	<div class="caixa">
+	<!--<div class="caixa">
 			<h1>Criar link para Whatsapp</h1>
 			<input type="text" id="entraNum" placeholder="(00)0 0000-0000">
 			<input type="text" id="msgOpc" placeholder="Mensagem opcional">
 			<button onclick="vai()" id="whats">Abrir</button>
+	</div>-->
+	<div class="caixaEntg">
+			<h2>A Entrega</h2>
+			<hgroup class="grupSob">
+			<img src="https://image.freepik.com/vetores-gratis/conceito-de-icone-de-entrega-rapida_7188-412.jpg">
+			<p>Um wiki é um website no qual utilizadores modificam colaborativamente conteúdo e estrutura diretamente do web browser. Num wiki típico, texto é escrito com uma linguagem de marcação e frequentemente editado com a ajuda de um editor de texto enriquecido.</p>
+			</hgroup>
+	</div>
+	<div class="caixaSob">
+			<h2>Sobre</h2>
+			<hgroup class="grupSob">
+			<img src="https://i.pinimg.com/474x/77/5b/91/775b91d4b1bfcac2aa3292b47763c1b1.jpg">
+			<p>Um wiki é um website no qual utilizadores modificam colaborativamente conteúdo e estrutura diretamente do web browser. Num wiki típico, texto é escrito com uma linguagem de marcação e frequentemente editado com a ajuda de um editor de texto enriquecido.</p>
+			</hgroup>
 	</div>
 	<footer>
-		<div><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/768px-Instagram_icon.png"><h2>Alex Souza</h2></div>
+		<div><h2>© Alex Souza</h2></div>
 	</footer>
 </body>
 <script type="text/javascript">
