--- a/informatica.html
+++ b/informatica.html
@@ -12,112 +12,124 @@
 				<h1>InfoBR</h1>
 	</header>
 	<div class="caixaDep">
-		<div><a href="index.html">Home</a></div>
-		<div><a href="informatica.html">Informática</a></div>
-		<div><a href="celulares.html">Celulares</a></div>
+		<a href="index.html"><div>Home</div></a>
+		<a href="informatica.html"><div class="fixcap">Informática</div></a>
+		<a href="celulares.html"><div>Celulares</div></a>
 	</div>
 	<section class="basec">
 		<article class="ol">
+						<script type="text/javascript">
+				function function_name() {
+					alert("Bu!");
+				}
+			</script>
 			<figure class="li">Mouse OEX
 				<img src="mouse.jpg"> 
-				<figcaption>CD-0001 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"> <figcaption>CD-0001 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Mouse OEX
 				<img src="mouse.jpg"> 
-				<figcaption>CD-0002 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"> <figcaption>CD-0002 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Mouse OEX
 				<img src="mouse.jpg"> 
-				<figcaption>CD-0003 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"> <figcaption>CD-0003 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Mouse OEX
 				<img src="mouse.jpg"> 
-				<figcaption>CD-0004 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"> <figcaption>CD-0004 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Mouse OEX
 				<img src="mouse.jpg"> 
-				<figcaption>CD-0005 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"> <figcaption>CD-0005 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Mouse OEX
 				<img src="mouse.jpg"> 
-				<figcaption>CD-0006 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"> <figcaption>CD-0006 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Mouse OEX
 				<img src="mouse.jpg"> 
-				<figcaption>CD-0001 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"> <figcaption>CD-0001 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Mouse OEX
 				<img src="mouse.jpg"> 
-				<figcaption>CD-0002 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"> <figcaption>CD-0002 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Mouse OEX
 				<img src="mouse.jpg"> 
-				<figcaption>CD-0003 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"> <figcaption>CD-0003 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Mouse OEX
 				<img src="mouse.jpg"> 
-				<figcaption>CD-0004 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"> <figcaption>CD-0004 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Mouse OEX
 				<img src="mouse.jpg"> 
-				<figcaption>CD-0005 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"> <figcaption>CD-0005 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Mouse OEX
 				<img src="mouse.jpg"> 
-				<figcaption>CD-0006 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"> <figcaption>CD-0006 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Mouse OEX
 				<img src="mouse.jpg"> 
-				<figcaption>CD-0001 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"> <figcaption>CD-0001 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Mouse OEX
 				<img src="mouse.jpg"> 
-				<figcaption>CD-0002 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"> <figcaption>CD-0002 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Mouse OEX
 				<img src="mouse.jpg"> 
-				<figcaption>CD-0003 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"> <figcaption>CD-0003 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Mouse OEX
 				<img src="mouse.jpg"> 
-				<figcaption>CD-0004 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"> <figcaption>CD-0004 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Mouse OEX
 				<img src="mouse.jpg"> 
-				<figcaption>CD-0005 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"> <figcaption>CD-0005 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Mouse OEX
 				<img src="mouse.jpg"> 
-				<figcaption>CD-0006 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"> <figcaption>CD-0006 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Mouse OEX
 				<img src="mouse.jpg"> 
-				<figcaption>CD-0001 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"> <figcaption>CD-0001 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Mouse OEX
 				<img src="mouse.jpg"> 
-				<figcaption>CD-0002 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"> <figcaption>CD-0002 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Mouse OEX
 				<img src="mouse.jpg"> 
-				<figcaption>CD-0003 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"> <figcaption>CD-0003 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Mouse OEX
 				<img src="mouse.jpg"> 
-				<figcaption>CD-0004 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"> <figcaption>CD-0004 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Mouse OEX
 				<img src="mouse.jpg"> 
-				<figcaption>CD-0005 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"> <figcaption>CD-0005 Saber mais...</figcaption></a>
 			</figure>
 			<figure class="li">Mouse OEX
 				<img src="mouse.jpg"> 
-				<figcaption>CD-0006 Saber mais...</figcaption>
+				<a  href="" onclick="function_name()"> <figcaption>CD-0006 Saber mais...</figcaption></a>
 			</figure>
 		</article>
 	</section>
+	<div class="caixaEntg">
+			<h2>A Entrega</h2>
+			<hgroup class="grupSob">
+			<img src="https://image.freepik.com/vetores-gratis/conceito-de-icone-de-entrega-rapida_7188-412.jpg">
+			<p>Um wiki é um website no qual utilizadores modificam colaborativamente conteúdo e estrutura diretamente do web browser. Num wiki típico, texto é escrito com uma linguagem de marcação e frequentemente editado com a ajuda de um editor de texto enriquecido.</p>
+			</hgroup>
+	</div>
 	<footer>
-		<div><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/768px-Instagram_icon.png"><h2>Alex Souza</h2></div>
+		<div><h2>© Alex Souza</h2></div>
 	</footer>
 </body>
 <script type="text/javascript">
