--- a/index.html
+++ b/index.html
@@ -18,11 +18,8 @@
 		<a href="celulares.html"><div>Celulares</div></a>
 	</div>
 		<div class="agendar">
-		<h1>Visita Técnica</h1>
-		<button><a  href="" target="_blank"  onclick="function_name()">AGENDAR</a></button>
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d496596.2073729492!2d-44.32060399610307!3d-13.49516726269738!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7593dc94d7bc589%3A0x32914e96b128d1cf!2sS%C3%A3o%20F%C3%A9lix%20do%20Coribe%20-%20BA!5e0!3m2!1spt-BR!2sbr!4v1607151080984!5m2!1spt-BR!2sbr" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">	
-			</iframe>
-	</div>
+			<img src="wallTop.png">
+		</div>
 	<section class="basec">
 		<article class="ol">
 			<script type="text/javascript">
@@ -111,11 +108,7 @@
 			<button onclick="vai()" id="whats">Abrir</button>
 	</div>-->
 	<div class="caixaEntg">
-			<h2>A Entrega</h2>
-			<hgroup class="grupSob">
-			<img src="https://image.freepik.com/vetores-gratis/conceito-de-icone-de-entrega-rapida_7188-412.jpg">
-			<p>Um wiki é um website no qual utilizadores modificam colaborativamente conteúdo e estrutura diretamente do web browser. Num wiki típico, texto é escrito com uma linguagem de marcação e frequentemente editado com a ajuda de um editor de texto enriquecido.</p>
-			</hgroup>
+			<img src="wallEntg.png">
 	</div>
 	<div class="caixaSob">
 			<h2>Sobre</h2>
