--- a/informatica.html
+++ b/informatica.html
@@ -121,13 +121,9 @@
 			</figure>
 		</article>
 	</section>
-	<div class="caixaEntg">
-			<h2>A Entrega</h2>
-			<hgroup class="grupSob">
-			<img src="https://image.freepik.com/vetores-gratis/conceito-de-icone-de-entrega-rapida_7188-412.jpg">
-			<p>Um wiki é um website no qual utilizadores modificam colaborativamente conteúdo e estrutura diretamente do web browser. Num wiki típico, texto é escrito com uma linguagem de marcação e frequentemente editado com a ajuda de um editor de texto enriquecido.</p>
-			</hgroup>
-	</div>
+			<div class="caixaEntg">
+			<img src="wallEntg.png">
+			</div>
 	<footer>
 		<div><h2>© Alex Souza</h2></div>
 	</footer>
